// protoのバージョンの宣言
syntax = "proto3";

// protoファイルから自動生成させるGoのコードの置き先
option go_package = "pkg/grpc";

// packageの宣言
package ChatRPC;

import "google/protobuf/timestamp.proto";
import "google/protobuf/empty.proto";


// サービスの定義
service MessagingServise {
	// サービスが持つメソッドの定義
	rpc HealthCheck(google.protobuf.Empty) returns (Status);
    rpc SendMessage(MsgRequest) returns (MsgResponse);
    rpc ReceiveMessage(MsgRequest) returns (stream MsgResponse);
}

// 型の定義
message Status {
	string msg =1;
}

message MsgRequest {
	string SendUserID =1;
    string MsgBody = 2;
    google.protobuf.Timestamp SendTimestamp =3;
}

message MsgResponse {
    string MsgBody = 1;
    google.protobuf.Timestamp SendTimestamp = 2;
}